Fixed major bug in SNP tracking (not --- out the genomes missing regions) and added core region presence/absence alignments

--- a/App/Styling/css/superphy.css
+++ b/App/Styling/css/superphy.css
@@ -242,6 +242,10 @@ g.scalebar text {
 td.msa_row_name {
   padding-right: 10px;
   text-align: right;
+  max-width: 200px;
+  text-overflow: ellipsis;
+  overflow: hidden;
+  white-space: nowrap;
 }
 /** Info message **************************/
 .msa-info td {
